fix issue with taskbar z-index being overridden by some bootswatch skins

--- a/less/modules/taskbar.less
+++ b/less/modules/taskbar.less
@@ -4,6 +4,11 @@
 	display: none;
 	z-index: 10001;
 
+	// Bootswatch fix
+	&.navbar-fixed-bottom {
+		z-index: 10001;
+	}
+
 	left: auto;
 
 	margin-top: 0;
